sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:28: error: Boolean does not take parameters
        {
        ^